--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background: url(https://assets.codepen.io/237800/universe-wallpaper.jpg) center center/cover fixed no-repeat;
+  background: url(https://i.pinimg.com/originals/ad/60/37/ad6037d534fa6c26be21605df585b60c.gif) center center/cover fixed no-repeat;
   font-family: "Helvetica", sans-serif;
   margin: 0;
   overflow: hidden;
